<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true">

    <!-- Background Gradient Overlay -->
    <View
        android:id="@+id/gradientOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_gradient_background"
        android:alpha="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Animated Logo Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logoContainer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/spacing_xl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <!-- Outer Ring Animation -->
        <View
            android:id="@+id/outerRing"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/splash_outer_ring"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Middle Ring Animation -->
        <View
            android:id="@+id/middleRing"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@drawable/splash_middle_ring"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Inner Circle with Logo -->
        <androidx.cardview.widget.CardView
            android:id="@+id/logoCard"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="@dimen/card_elevation"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="?attr/colorOnPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Logo Icon -->
            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_spendwise_logo"
                android:scaleType="centerInside"
                android:contentDescription="@string/app_name" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- App Name with Animation -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_xxl"
        android:textStyle="bold"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="@dimen/spacing_xl"
        android:alpha="0.8"
        app:layout_constraintTop_toBottomOf="@id/logoContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tagline with Animation -->
    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tagline"
        android:textSize="@dimen/text_size_md"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="@dimen/spacing_sm"
        android:alpha="0.8"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Loading Indicator -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="?attr/colorOnPrimary"
        app:trackColor="@android:color/transparent"
        app:indicatorSize="32dp"
        app:trackThickness="3dp"
        app:layout_constraintTop_toBottomOf="@id/tagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Floating Particles for Animation -->
    <ImageView
        android:id="@+id/particle1"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:src="@drawable/ic_particle"
        android:alpha="0.6"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/particle2"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:src="@drawable/ic_particle"
        android:alpha="0.4"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/particle3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:src="@drawable/ic_particle"
        android:alpha="0.7"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/particle4"
        android:layout_width="7dp"
        android:layout_height="7dp"
        android:src="@drawable/ic_particle"
        android:alpha="0.5"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Version Info -->
    <TextView
        android:id="@+id/versionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_info"
        android:textSize="@dimen/text_size_xs"
        android:textColor="?attr/colorOnPrimary"
        android:alpha="0.7"
        android:layout_marginBottom="@dimen/spacing_lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>